--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
-<!doctype html>
-<html lang="nl">
-	
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2223</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SKYDANCE</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,500&display=swap" rel="stylesheet">
 </head>
-
 <body>
-	<h1>Howdy FED2223</h1>
-
-	<script defer src="scripts/script.js"></script>
+<main>
+    <nav>
+        <>
+    </nav>
+    <picture>
+         <!-- de <picture> element verandert de <img> wanneer de browser smaller wordt -->
+        <source srcset="images/big-banner.png" media="(min-width: 600px)" id="banner">
+        <img src="images/small-banner.png">
+        <!-- bron: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/picture -->
+    </picture>
+    <h1>
+        SEE WHAT'S NEW
+    </h1>
+    <ul>
+        <li>
+            <img src="images/pink-tennis-skirt.png">
+            <h2>Dusty pink tennis belt skirt</h2>
+            <p>€28,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/eden-straight-leg-jeans.png">
+            <h2>Eden straight leg jeans</h2>
+            <p>€87,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/gaia-slit-lace-skirt.png">
+            <h2>Gaia slit lace skirt</h2>
+            <p>€34,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/tall-grid-tennis-skirt.png">
+            <h2>Tall grid tennis belt skirt with lace trim</h2>
+            <p>€44,00 EUR</p>
+        </li>
+    </ul>
+</main>
 </body>
-	
 </html>
