--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYDANCE</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="shopskydance/favicon.gif">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +16,7 @@
     </nav>
     <picture>
          <!-- de <picture> element verandert de <img> wanneer de browser smaller wordt -->
-        <source srcset="images/big-banner.png" media="(min-width: 600px)" id="banner">
+        <source srcset="images/big-banner.png" media="(min-width: 600px)">
         <img src="images/small-banner.png">
         <!-- bron: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/picture -->
     </picture>
@@ -24,26 +25,130 @@
     </h1>
     <ul>
         <li>
-            <img src="images/pink-tennis-skirt.png">
+            <img src="images/pink-tennis-skirt.png" alt="">
             <h2>Dusty pink tennis belt skirt</h2>
             <p>€28,00 EUR</p>
         </li>
         <li>
-            <img src="images/eden-straight-leg-jeans.png">
+            <img src="images/eden-straight-leg-jeans.png" alt="">
             <h2>Eden straight leg jeans</h2>
             <p>€87,00 EUR</p>
         </li>
         <li>
-            <img src="images/gaia-slit-lace-skirt.png">
+            <img src="images/gaia-slit-lace-skirt.png" alt="">
             <h2>Gaia slit lace skirt</h2>
             <p>€34,00 EUR</p>
         </li>
         <li>
-            <img src="images/tall-grid-tennis-skirt.png">
+            <img src="images/tall-grid-tennis-skirt.png" alt="">
             <h2>Tall grid tennis belt skirt with lace trim</h2>
             <p>€44,00 EUR</p>
         </li>
+        <li>
+            <img src="images/sinister-straight-leg.png" alt="">
+            <h2>Sinister straight leg embroidered jeans</h2>
+            <p>€89,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/astrid-embroidered-shirt.png" alt="">
+            <h2>Astrid embroidered shirt</h2>
+            <p>€55,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/morbid-shorts.png" alt="">
+            <h2>Morbid embroidered shorts</h2>
+            <p>€30,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/moon-cult-crop-top.png" alt="">
+            <h2>Moon cult embroidered crop top</h2>
+            <p>€26,00 EUR</p>
+        </li>
     </ul>
+    <picture>
+        <source srcset="images/big-banner-2.png" media="(min-width: 600px)">
+        <img src="images/small-banner-2.png">
+    </picture>
+    <ul>
+        <li>
+            <img src="images/hoodies.png" alt="hoodies">
+        </li>
+        <li>
+            <img src="images/lingerie.png" alt="lingerie">
+        </li>
+        <li>
+            <img src="images/skirts.png" alt="skirts">
+        </li>
+    </ul>
+    <picture>
+        <source srcset="images/big-banner-3.png" media="(min-width: 600px)">
+        <img src="images/small-banner-3.png">
+    </picture>
+    <h1>
+        Get them before they're gone forever!
+    </h1>
+    <ul>
+        <li>
+            <img src="images/thorn-heart-cardigan.png" alt="">
+            <h2>Thorn heart embroidered cardigan</h2>
+            <p>€28,00EUR €35,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/violet-clash-sweat-shorts.png" alt="">
+            <h2>Violet clash organic cotton sweat shorts</h2>
+            <p>€20,00 EUR €29,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/heaven-to-touch-longsleeve.png" alt="">
+            <h2>Heaven to touch longsleeve</h2>
+            <p>€18,00 EUR €26,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/velvet-midi-skirt.png" alt="">
+            <h2>Velvet midi skirt with eyelets</h2>
+            <p>€7,00 EUR €14,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/purple-webbing-belt.png" alt="">
+            <h2>Purple webbing belt</h2>
+            <p>€8,00 EUR €12,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/vultures-double-chain.png" alt="">
+            <h2>Vultures double chain with ring</h2>
+            <p>€7,00 EUR €12,50 EUR</p>
+        </li>
+        <li>
+            <img src="images/nymph-crop-top.png" alt="">
+            <h2>Nymph organic cotton crop top</h2>
+            <p>€14,00 EUR €20,00 EUR</p>
+        </li>
+        <li>
+            <img src="images/karma-velvet-harness.png" alt="">
+            <h2>Karma velvet harness</h2>
+            <p>€22,00 EUR €25,00 EUR</p>
+        </li>
+    </ul>
+    <section>
+        <h1>Let's keep in touch!</h1>
+        <p>subscribe to our newsletter to be the first to know about new arrivals, sales and more! <3</p>
+    </section>
 </main>
+<footer>
+    <ul>
+        <li>
+            <img src="images/facebook-icon-white.svg" alt="facebook">
+        </li>
+        <li>
+            <img src="images/ig_icon_white.svg" alt="instagram">
+        </li>
+        <li>
+            <img src="images/pinterest-icon-white.svg" alt="pinterest">
+        </li>
+        <li>
+            <img src="images/tiktok-icon-white.svg" alt="tiktok">
+        </li>
+    </ul>
+</footer>
 </body>
 </html>
