--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYDANCE</title>
-    <link rel="stylesheet" href="styles/style2.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="shopskydance/favicon.gif">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -55,13 +55,40 @@
 	</ul>
     <button>></button>
 </section>
-<aside>
+<section>
     <h1>Dusty pink tennis belt skirt</h1>
     <p>
         Timeless pleated mini skirt in a shade of dirty pink. 
         Pump up your outfit with thick-soled ankle boots and fishnet stockings, and a unique look is guaranteed!
     </p>
-</aside>
+    <h2>€28,00 EUR</h2>
+    <ul>
+        <li>
+            <button>XXS</button>
+        </li>
+        <li>
+            <button>XS</button>
+        </li>
+        <li>
+            <button>S</button>
+        </li>
+        <li>
+            <button>M</button>
+        </li>
+        <li>
+            <button>L</button>
+        </li>
+        <li>
+            <button>XL</button>
+        </li>
+        <li>
+            <button>XXL</button>
+        </li>
+        <li>
+            <button>3XL</button>
+        </li>
+    </ul>
+</section>
       </main>
         <!--MAIN END / FOOTER START -->
         <footer>
