--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </ul>
             <p>COPYRIGHT © 2022 SKYDANCE EN | REALIZATION MARKOFANI</p>
     </footer>
-<script src="script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
 
