--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYDANCE</title>
-    <link rel="stylesheet" href="styles/style2.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="shopskydance/favicon.gif">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -38,58 +38,57 @@
         <a href="#"><img aria-hidden="true" src="images/cart-icon.svg" /></a>
       </header>
       <main>
-
-<section>
-    <button><</button>
-    <ul>
-		<li><img src="images/pink-tennis-skirt.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-2.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-3.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-4.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-5.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-6.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-7.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-8.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-9.png" alt="" /></li>
-        <li><img src="images/pink-tennis-skirt-10.png" alt="" /></li>
-	</ul>
-    <button>></button>
-</section>
-<section>
-    <h1>Dusty pink tennis belt skirt</h1>
-    <p>
-        Timeless pleated mini skirt in a shade of dirty pink. 
-        Pump up your outfit with thick-soled ankle boots and fishnet stockings, and a unique look is guaranteed!
-    </p>
-    <h2>€28,00 EUR</h2>
-    <ul>
-        <li>
-            <button>XXS</button>
-        </li>
-        <li>
-            <button>XS</button>
-        </li>
-        <li>
-            <button>S</button>
-        </li>
-        <li>
-            <button>M</button>
-        </li>
-        <li>
-            <button>L</button>
-        </li>
-        <li>
-            <button>XL</button>
-        </li>
-        <li>
-            <button>XXL</button>
-        </li>
-        <li>
-            <button>3XL</button>
-        </li>
-    </ul>
-</section>
-      </main>
+        <ul>
+            <li id="image1"><img src="images/pink-tennis-skirt.png" alt="" /></li>
+            <li id="image2"><img src="images/pink-tennis-skirt-2.png" alt="" /></li>
+            <li id="image3"><img src="images/pink-tennis-skirt-3.png" alt="" /></li>
+            <li id="image4"><img src="images/pink-tennis-skirt-4.png" alt="" /></li>
+        </ul>
+        
+        <ul>
+            <li><a href="#image1"><img src="images/pink-tennis-skirt.png" alt="" /></a></li>
+            <li><a href="#image2"><img src="images/pink-tennis-skirt-2.png"  alt="" /></a></li>
+            <li><a href="#image3"><img src="images/pink-tennis-skirt-3.png" alt="" /></a></li>
+            <li><a href="#image4"><img src="images/pink-tennis-skirt-4.png"  alt="" /></a></li>
+        </ul>
+            <!-- SECTION 4 -->
+            <!-- PAGINA TEKST / PRODUCT INFORMATIE -->
+            <section>
+                <h1>Dusty pink tennis belt skirt</h1>
+                <p>
+                    Timeless pleated mini skirt in a shade of dirty pink. 
+                    Pump up your outfit with thick-soled ankle boots and fishnet stockings, and a unique look is guaranteed!
+                </p>
+                <h2>€28,00 EUR</h2>
+                <ul>
+                    <li>
+                        <button>XXS</button>
+                    </li>
+                    <li>
+                        <button>XS</button>
+                    </li>
+                    <li>
+                        <button>S</button>
+                    </li>
+                    <li>
+                        <button>M</button>
+                    </li>
+                    <li>
+                        <button>L</button>
+                    </li>
+                    <li>
+                        <button>XL</button>
+                    </li>
+                    <li>
+                        <button>XXL</button>
+                    </li>
+                    <li>
+                        <button>3XL</button>
+                    </li>
+                </ul>
+            </section>
+        </section>
+    </main>
         <!--MAIN END / FOOTER START -->
         <footer>
             <!-- FOOTER UL 1 -->
@@ -197,6 +196,6 @@
             </ul>
             <p>COPYRIGHT © 2022 SKYDANCE EN | REALIZATION MARKOFANI</p>
     </footer>
-    <script src="scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
