--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYDANCE</title>
-    <link rel="stylesheet" href="style2.css">
+    <link href="styles/style2.css" rel="stylesheet">
     <link rel="icon" href="shopskydance/favicon.gif">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 </head>
