--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYDANCE</title>
-    <link href="styles/style2.css" rel="stylesheet">
+    <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="shopskydance/favicon.gif">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -43,6 +43,8 @@
             <li id="image2"><img src="images/pink-tennis-skirt-2.png" alt="" /></li>
             <li id="image3"><img src="images/pink-tennis-skirt-3.png" alt="" /></li>
             <li id="image4"><img src="images/pink-tennis-skirt-4.png" alt="" /></li>
+            <li id="image5"><img src="images/pink-tennis-skirt-5.png" alt="" /></li>
+            <li id="image6"><img src="images/pink-tennis-skirt-6.png" alt="" /></li>
         </ul>
         
         <ul>
@@ -50,8 +52,10 @@
             <li><a href="#image2"><img src="images/pink-tennis-skirt-2.png"  alt="" /></a></li>
             <li><a href="#image3"><img src="images/pink-tennis-skirt-3.png" alt="" /></a></li>
             <li><a href="#image4"><img src="images/pink-tennis-skirt-4.png"  alt="" /></a></li>
+            <li><a href="#image5"><img src="images/pink-tennis-skirt-5.png"  alt="" /></a></li>
+            <li><a href="#image6"><img src="images/pink-tennis-skirt-6.png"  alt="" /></a></li>
         </ul>
-            <!-- SECTION 4 -->
+            <!-- SECTION 1 -->
             <!-- PAGINA TEKST / PRODUCT INFORMATIE -->
             <section>
                 <h1>Dusty pink tennis belt skirt</h1>
@@ -60,6 +64,7 @@
                     Pump up your outfit with thick-soled ankle boots and fishnet stockings, and a unique look is guaranteed!
                 </p>
                 <h2>€28,00 EUR</h2>
+                <p>Choose size:</p>
                 <ul>
                     <li>
                         <button>XXS</button>
@@ -87,7 +92,12 @@
                     </li>
                 </ul>
             </section>
-        </section>
+            <section>
+                <p>Check out the size chart</p>
+                <button>Add to cart</button>
+                <p>Gabrysia is 164cm (5'4) tall, chest: 88cm, waist: 70cm, hips: 98cm, and she's wearing size S.
+                    Gabriela is 164cm (5'4) tall, chest: 85cm, waist: 70cm, hips: 95cm, and she's wearing size S.</p>
+            </section>
     </main>
         <!--MAIN END / FOOTER START -->
         <footer>
